<resources>
    <string name="app_name">MyNote</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="viewType">列表</string>
    <string name="sync">同步</string>
    <string name="sort">排序</string>
    <string name="reminder">提醒</string>
    <string name="checklist">清单</string>
    <string name="menu_find">查找</string>
    <string name="menu_send">发送</string>
    <string name="menu_detail">详情</string>
    <string name="delete">删除</string>
    <string name="sou">action_search</string>
    <string name="detail_set_reminder">设置提醒</string>
    <string name="downing">下载中....</string>

    <string name="file_size">大小：%1$s</string>
    <string name="detail_text_hint">点击添加文本</string>

    <string name="ic_search">\uE911</string>
    <string name="ic_svg_account">\uE94B</string>
    <string name="ic_svg_add_folder">\uE923</string>
    <string name="ic_svg_add_note">\uE900</string>
    <string name="ic_svg_app_icon_login">\uE929</string>
    <string name="ic_svg_arrow_down">\uE931</string>
    <string name="ic_svg_arrow_left">\uE951</string>
    <string name="ic_svg_arrow_right">\uE952</string>
    <string name="ic_svg_arrow_up">\uE930</string>
    <string name="ic_svg_attachment">\uE947</string>
    <string name="ic_svg_audio">\uE946</string>
    <string name="ic_svg_back_paint">\uE945</string>
    <string name="ic_svg_backup">\uE92C</string>
    <string name="ic_svg_backward">\uE913</string>
    <string name="ic_svg_brush">\uE944</string>
    <string name="ic_svg_btn_list_drag">\uE934</string>
    <string name="ic_svg_camera">\uE943</string>
    <string name="ic_svg_camera_mini">\uE94E</string>
    <string name="ic_svg_cancel">\uE93C</string>
    <string name="ic_svg_check">\uE964</string>
    <string name="ic_svg_clear_paint">\uE938</string>
    <string name="ic_svg_color_pick_selected">\uE93B</string>
    <string name="ic_svg_complete_check_off">\uE93F</string>
    <string name="ic_svg_complete_check_on">\uE940</string>
    <string name="ic_svg_contact">\uE94A</string>
    <string name="ic_svg_delete">\uE937</string>
    <string name="ic_svg_done">\uE935</string>
    <string name="ic_svg_edit">\uE933</string>
    <string name="ic_svg_enter_paint">\uE932</string>
    <string name="ic_svg_eraser_paint">\uE912</string>
    <string name="ic_svg_file">\uE948</string>
    <string name="ic_svg_fingerprint">\uE963</string>
    <string name="ic_svg_folder_all">\uE91F</string>
    <string name="ic_svg_folder_hide">\uE902</string>
    <string name="ic_svg_folder_locked">\uE95B</string>
    <string name="ic_svg_folder_normal">\uE920</string>
    <string name="ic_svg_folder_other">\uE921</string>
    <string name="ic_svg_folder_show">\uE901</string>
    <string name="ic_svg_folder_unlocked">\uE95A</string>
    <string name="ic_svg_forward">\uE915</string>
    <string name="ic_svg_graffiti">\uE92F</string>
    <string name="ic_svg_handwriting">\uE92E</string>
    <string name="ic_svg_help">\uE92D</string>
    <string name="ic_svg_info">\uE936</string>
    <string name="ic_svg_keyboard_close">\uE91E</string>
    <string name="ic_svg_mail">\uE953</string>
    <string name="ic_svg_more">\uE925</string>
    <string name="ic_svg_move_to">\uE924</string>
    <string name="ic_svg_not_selected">\uE917</string>
    <string name="ic_svg_order_a_z_asc">\uE905</string>
    <string name="ic_svg_order_a_z_des">\uE904</string>
    <string name="ic_svg_order_create_asc">\uE93A</string>
    <string name="ic_svg_order_create_des">\uE939</string>
    <string name="ic_svg_order_modify_asc">\uE927</string>
    <string name="ic_svg_order_modify_des">\uE926</string>
    <string name="ic_svg_paragraph">\uE92B</string>
    <string name="ic_svg_photo">\uE91B</string>
    <string name="ic_svg_photo_broken">\uE91C</string>
    <string name="ic_svg_play">\uE91A</string>
    <string name="ic_svg_play_pause">\uE91D</string>
    <string name="ic_svg_pro_ads">\uE961</string>
    <string name="ic_svg_pro_backup">\uE95C</string>
    <string name="ic_svg_pro_image_sync">\uE962</string>
    <string name="ic_svg_pro_reminder">\uE95D</string>
    <string name="ic_svg_pro_security">\uE95F</string>
    <string name="ic_svg_pro_sync">\uE960</string>
    <string name="ic_svg_pro_theme">\uE95E</string>
    <string name="ic_svg_record_stop">\uE949</string>
    <string name="ic_svg_recorder">\uE916</string>
    <string name="ic_svg_reminder">\uE914</string>
    <string name="ic_svg_reminder_mini">\uE956</string>
    <string name="ic_svg_rotate">\uE94F</string>
    <string name="ic_svg_round_bg">\uE94C</string>
    <string name="ic_svg_save">\uE950</string>
    <string name="ic_svg_security">\uE910</string>
    <string name="ic_svg_select_all">\uE958</string>
    <string name="ic_svg_selected">\uE919</string>
    <string name="ic_svg_send">\uE90F</string>
    <string name="ic_svg_settings">\uE90E</string>
    <string name="ic_svg_space_paint">\uE90B</string>
    <string name="ic_svg_sync">\uE909</string>
    <string name="ic_svg_tel">\uE955</string>
    <string name="ic_svg_time">\uE906</string>
    <string name="ic_svg_time_min">\uE959</string>
    <string name="ic_svg_unselect_all">\uE957</string>
    <string name="ic_svg_video">\uE903</string>
    <string name="ic_svg_web">\uE954</string>
    <string name="ic_sync_error">\uE94D</string>
    <string name="ic_svg_share_image">\uE965</string>
    <string name="ic_svg_share_text">\uE968</string>


    <string name="title_bar_attach">附件</string>
    <string name="title_bar_camera">相机</string>
    <string name="title_bar_graffiti">涂鸦</string>
    <string name="title_bar_handwrite">手写</string>
    <string name="title_bar_photo">照片</string>
    <string name="title_bar_recorder">录音</string>
    <string name="ui_password_label">密码</string>
    <string name="undo">撤销</string>
    <string name="show_abstract">显示摘要</string>
    <string name="show_title_only">仅显示标题</string>
    <string name="word_number">字数</string>
    <string name="last_modified">上次修改时间</string>
    <string name="created">创建时间</string>
    <string name="file_name">文件名：</string>
    <string name="size">大小：</string>
    <string name="file_lastmodified">上次修改时间：</string>
    <string name="file_contents">内容：</string>
    <string name="delete_warning">确定要删除吗？</string>
    <string name="don_t_show_again">不再询问</string>
    <string name="title_activity_settings">Settings</string>


    <string name="preferences_application">应用</string>
    <string name="preferences_authorize_faild">验证失败</string>
    <string name="preferences_backup_summary">从SD卡导入笔记或导出笔记到SD卡</string>
    <string name="preferences_default_theme">0</string>
    <string name="preferences_feed_back_summary">通过邮件反馈</string>
    <string name="preferences_feed_back_title">反馈</string>
    <string name="preferences_more">更多设置</string>
    <string name="preferences_more_summary">主题、字体等</string>
    <string name="preferences_remind_setting_summary">设置提醒铃声和震动</string>
    <string name="preferences_remind_sound">铃声</string>
    <string name="preferences_remind_vibrate">震动</string>
    <string name="preferences_remind_vibrate_summary">提醒将会有震动</string>
    <string name="preferences_security_change_title">修改密码</string>
    <string name="preferences_security_lock_application_title">给整个应用加锁</string>
    <string name="preferences_security_setting">安全</string>
    <string name="preferences_security_setting_summary">密码锁定</string>
    <string name="preferences_share_app_summary">把GNotes分享给朋友们.</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="account_empty_setup">立即登录</string>
    <string name="account">帐户</string>
    <string name="sync_options_summary_pro">手动同步、同步图片大小等</string>
    <string name="sync_options">同步选项</string>
    <string name="import_export">导入/导出</string>
    <string name="other">其他</string>
    <string name="preferences_about_summary">当前版本、检测更新、推荐等</string>
    <string name="preferences_about_title">关于</string>
    <string name="gmail_needs_connecting">点击关联你的邮箱帐户</string>

    <string name="passcode_first_input">输入你的密码</string>
    <string name="forget_password_text">忘记密码?</string>
    <string name="fingerprint_description">验证指纹解锁随笔记。</string>
    <string name="fingerprint_hint">请触摸感应器</string>
    <string name="fingerprint_not_enable_summary">请先在系统中启用指纹识别</string>
    <string name="fingerprint_not_enable_title">未启用指纹识别</string>
    <string name="lock_and_exit">锁定</string>
    <string name="try_again">再试一次</string>
    <string name="fingerprint_success">解锁成功</string>
    <string name="email">邮箱</string>
    <string name="sign_in">登录</string>
    <string name="btn_account_sign_up">注册</string>
    <string name="sync_with_gmail">同步到Gmail</string>
    <string name="avatar">头像</string>
    <string name="account_info_last_sync">上次同步时间</string>
    <string name="account_info_never_synced">尚未同步</string>
    <string name="sign_out">退出登录</string>
    <string name="doing">处理中...</string>

</resources>
