<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.xuyazhou.mynote.common.widget.IconTextView
            android:id="@+id/fingerprint_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:layout_marginTop="30dp"
            android:text="@string/ic_svg_fingerprint"
            android:textSize="60.0sp" />

        <com.xuyazhou.mynote.common.widget.IconTextView
            android:id="@+id/cancel_button"
            android:layout_width="48.0dip"
            android:layout_height="48.0dip"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/action_bar_item_background_inverse"
            android:gravity="center"

            android:text="@string/ic_svg_cancel"
            android:textColor="@color/colorPrimary_light"
            android:textSize="24.0sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/fingerprint_status"
        style="@android:style/TextAppearance.Material.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="17.0dip"
        android:text="@string/fingerprint_hint"
        android:textColor="?android:textColorPrimary" />

    <TextView
        android:id="@+id/fingerprint_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30.0dip"
        android:layout_marginTop="10.0dip"
        android:text="@string/fingerprint_description"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:textColor="?android:textColorSecondary" />
</LinearLayout>