<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200.0dp"
    android:gravity="center_horizontal"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="@dimen/grid_item_corner_radius"
    app:cardElevation="@dimen/grid_item_elevation"
    app:corner_radius="@dimen/grid_item_corner_radius">

    <RelativeLayout
        android:id="@+id/grid_image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?itemSelectableBackground"
        android:padding="8.0dip">

        <TextView
            android:id="@+id/grid_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/select_layout"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="?android:textColorPrimary"
            android:textSize="16.0sp" />

        <TextView
            android:id="@+id/grid_notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottom_layout"
            android:layout_below="@+id/grid_title"
            android:ellipsize="end"
            android:lineSpacingMultiplier="1.1"
            android:maxLines="8"
            android:textColor="?android:textColorSecondary"
            android:textSize="12.0sp" />

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/grid_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:textColor="?android:textColorTertiary"
                android:textSize="10.0sp" />

            <com.xuyazhou.mynote.common.widget.IconTextView
                android:id="@+id/grid_reminder"
                style="@style/list_item_small_img"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:text="@string/ic_svg_reminder" />

            <com.xuyazhou.mynote.common.widget.IconTextView
                android:id="@+id/grid_radio"
                style="@style/list_item_small_img"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_svg_audio" />

            <com.xuyazhou.mynote.common.widget.IconTextView
                android:id="@+id/grid_video"
                style="@style/list_item_small_img"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_svg_video" />

            <com.xuyazhou.mynote.common.widget.IconTextView
                android:id="@+id/grid_file"
                style="@style/list_item_small_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ic_svg_attachment" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/select_layout"
            android:layout_width="24.0dip"
            android:layout_height="24.0dip"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true">

            <com.xuyazhou.mynote.common.widget.IconTextView
                android:id="@+id/select_bg_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/ic_svg_round_bg"
                android:textColor="?iconColorPrimaryInverse"
                android:textSize="23.0sp"
                android:visibility="gone" />

            <com.xuyazhou.mynote.common.widget.IconTextView
                android:id="@+id/grid_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/ic_svg_selected"
                android:textColor="?colorAccent"
                android:textSize="20.0sp"
                android:visibility="gone" />

            <com.xuyazhou.mynote.common.widget.IconTextView
                android:id="@+id/grid_not_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/ic_svg_not_selected"
                android:textColor="?icon_color_selector_unselected"
                android:textSize="20.0sp"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>